fix image resizing on small screens

--- a/css/images.scss
+++ b/css/images.scss
@@ -12,7 +12,11 @@
     text-align: left;
   }
 
-  > em {
+  img {
+    max-width: 100%;
+  }
+
+  em {
     color: $subtle;
     display: block;
     font-size: 0.8rem;
